# TFace

./: .gitignore  CONTRIBUTING.md  License.txt  README.md  eval.py  local_train.sh  requirements.txt  train_config.py
attribute/M3DFEL/: README.md  main.py  options.py  requirements.txt  solver.py  utils.py
backbone/: metric.py
deploy/: CMakeLists.txt  README.md
deploy/converter/: convert_onnx2tnn.sh
deploy/core/: face_feature.h  util.h
deploy/scripts/: build_linux_x86.sh
generate_pseudo_labels/: gen_datalist.py  gen_pseudo_labels.py
generate_pseudo_labels/extract_embedding/: config_test.py
generation/uiface/: README.md  main.py  requirements.txt  sample.py
quality/: eval.py  train.py
quality/backbone/: loss.py  metric.py
quality/generate_pseudo_labels/: gen_datalist.py
recognition/: README.md  local_train.sh  requirements.txt  train.py  train.yaml
recognition/deploy/: README.md
recognition/test/: IJB_Evaluation.py  README.md  extract_features.py  utils.py  verification.py  verification_rfw.py
recognition/tools/: decode.py  img2tfrecord.py
recognition/torchkit/: __init__.py
security/: README.md
tasks/cifp/: README.md  train_cifp.py  train_config.yaml
tasks/ddl/: README.md  train_config.yaml  train_ddl.py
tasks/distfc/: README.md  train_config.yaml  train_distfc.py
tasks/localfc/: train_config.yaml  train_localfc.py
tasks/scf/: README.md  ive.py  kl_delta_vmf.py  (+3 more)
test/: IJB_Evaluation.py  datasets.py  extract_features.py  verification.py  verification_rfw.py
tools/: convert_new_index.py
torchkit/: __version__.txt
(+249 files in other folders)
